# categorisation

./: .env.exemple  .gitignore  AGENTS.md  README.md  package-lock.json  plan.md  pyproject.toml  start.sh
config/: pipeline.example.api.yaml  pipeline.example.yaml
data/: tickets_jira.csv
data/output/: categorized.csv  categorized_20251106-223525.csv  categorized_20251106-224119.csv  categorized_summary_20251106-224119.json
src/ano2/: __init__.py  api.py  cli.py  config.py  embed.py  llm.py  log.py  pipeline.py  server.py
src/ano2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
