[project]
name = "ano2"
version = "0.1.0"
description = "Dynamic feedback categorization pipeline (Category/Subcategory/Sentiment) with API and local vLLM modes"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ANO2" }]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.24.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "httpx>=0.27.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.3.0",
  "sentence-transformers>=3.0.0",
  "python-dotenv>=1.0.1",
  "typer>=0.12.0",
]

[project.scripts]
ano2 = "ano2.cli:app"

[tool.uv]
package = true
dev-dependencies = []
